--- a/main_stylesheet.css
+++ b/main_stylesheet.css
@@ -37,16 +37,6 @@ body{
     list-style-type : none;
 }
 
-.navbar .mainMenu{
-    width : 100%;
-    position : relative;
-}
-
-.navbar .mainMenu>li{
-    display : inline-block;
-    margin-left : 9px;
-}
-
 .navbar a{
     color : white;
     padding :5px;
@@ -54,6 +44,11 @@ body{
     font-size : 14px;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
+}
+
+.dropable::after{
+    content : ">";
+    padding : 0px 5px;
 }
 
 .navbar .mainMenu{
@@ -314,6 +309,11 @@ body{
 
 /**SECOND SECTION STARTS HERE**/
 
+.homepage-products{
+    padding : 40px 30px;
+    margin-top:7px;
+}
+
 .homepage-products h1{
     font-size : 25px;
     margin-bottom : 15px;
@@ -326,9 +326,17 @@ body{
     margin : 15px 0px 10px;
 }
 
-.homepage-products .row .col{
-    padding : 0px 40px 0px 15px;
+.homepage-products .row > div{
+    display : flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.homepage-products .row > div p{
+    text-align: center;
+    width : 90%;
+}
+
 
 /***PAGE FOOTER STYLING STARTS HERE***/
 
@@ -337,27 +345,24 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    padding : 5px 15px 0px;
 }
 
 .contact-details .spoonpart{
     display : flex;
     justify-content: space-between;
+    padding : 5px 15px 0px;
 }
 
 .spoonpart p{
     font-size : 12px;
     color : white;
-    padding : 5px;
+    align-self: center;
+    padding : 0px 20px;
 }
 
-.contact-details .sitemap .nav-link::after{
-    content : '|';
-    position: relative;
-    left : 5px;
-}
-
-.contact-details .sitemap .no-line.nav-link::after{
-    display: none;
+.contact-details .sitemap{
+    display : none;
 }
 
 /*****ABOUT PAGE STYLING STARTS HERE*****/
@@ -798,7 +803,6 @@ body{
     background-position : center;
     background-size: cover;
     background-repeat: no-repeat;
-    padding : 40px 100px 80px !important;
 }
 
 /*******MEDIA**********/
