--- a/main_stylesheet.css
+++ b/main_stylesheet.css
@@ -62,6 +62,13 @@ body{
     padding : 15px 0px;
 }
 
+.navbar .mainMenu a:focus{
+    background-image : url("pics/general_pics/menu_1.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 
 .navbar .mainMenu li{
     display: block;
