--- a/main_stylesheet.css
+++ b/main_stylesheet.css
@@ -326,7 +326,7 @@ body{
     padding : 40px 30px;
 }
 
-.aboutus-body .row > div img{
+.aboutus-body .about-us-content > div img{
     width : 100%;
 }
 
@@ -354,7 +354,7 @@ body{
 
 .everyday-range-breads > div {
     display : grid;
-    grid-template-columns: repeat(2,0.5fr);
+    grid-template-columns: repeat(2,1fr);
     grid-column-gap: 10%;
     padding : 10px 0px;
 }
@@ -398,7 +398,7 @@ body{
 .everyday-buns-and-rolls{
     padding : 40px 30px;
     display : grid;
-    grid-template-columns: repeat(2,0.5fr);
+    grid-template-columns: repeat(2,1fr);
     grid-column-gap:10%;
 }
 
@@ -418,7 +418,7 @@ body{
     padding : 40px 30px;
 }
 
-.bakeries-content p{
+.bakeries-contact-info p{
     color: #0059a9;
     font-size : 16px;
     font-weight : 400;
@@ -426,7 +426,7 @@ body{
     margin : 0;
 }
 
-.bakeries-content > div{
+.bakeries-contact-info > div{
     padding : 10px 0px;
 }
 
@@ -674,13 +674,13 @@ body{
 /*****DOWNLOADS PAGE STYLING STARTS HERE*****/
 
 
-.downloads-body h5,p{
+.downloads-container h5,p{
     color: #0059a9;
     font-size : 16px;
     font-family : 'open-sans';
 }
 
-.downloads-body h5{
+.downloads-container h5{
     font-weight : 600;
     padding : 5px 0px 3px;
     margin : 0;
@@ -721,7 +721,7 @@ body{
 .vita-life-buns{
     padding : 40px 30px;
     display : grid;
-    grid-template-columns: repeat(2,0.5fr);
+    grid-template-columns: repeat(2,1fr);
     grid-column-gap: 10%;
 
 }
@@ -744,7 +744,7 @@ body{
 .treats-buns-range{
     padding : 40px 30px;
     display : grid;
-    grid-template-columns: repeat(2,0.5fr);
+    grid-template-columns: repeat(2,1fr);
     grid-column-gap: 10%;
 }
 
@@ -761,7 +761,7 @@ body{
 .vita-life-breads{
     padding : 40px 30px;
     display : grid;
-    grid-template-columns: repeat(2,0.5fr);
+    grid-template-columns: repeat(2,1fr);
     grid-column-gap:10%;
 }
 
@@ -918,10 +918,6 @@ body{
 
     /**Homepage products**/
 
-    .homepage-products{
-        padding : 40px 100px 20px;
-    }
-
     .homepage-products .bakery-range{
         display : flex;
         justify-content: space-between;
@@ -934,6 +930,82 @@ body{
 
     .homepage-products .bakery-range > div img{
         width : 100%;
+    }
+
+    /**About us page**/
+
+    .aboutus-body .about-us-content{
+        display : flex;
+        justify-content: space-between;
+    }
+
+    .aboutus-body .about-us-content .about-us-info{
+        flex: 0.9;
+    }
+
+    .bakeries-contact-info{
+        display : grid;
+        grid-template-columns: repeat(4,1fr);
+    }
+
+    /**Downloads**/
+
+    .downloads-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-column-gap : 2%;
+    }
+
+    /**Everyday range bread**/
+
+    .everyday-range-breads .brown-bread ,
+    .everyday-range-breads .white-bread{
+        grid-template-columns: repeat(3,1fr);
+        grid-column-gap: 4%;
+    }
+
+    .everyday-range-breads .farmstyle-bread{
+        grid-template-columns: repeat(12,1fr);
+        grid-column-gap: 4%;
+    }
+
+    .everyday-range-breads .farmstyle-bread > div:nth-of-type(1){
+        grid-column : 3 / 7;
+    }
+
+    .everyday-range-breads .farmstyle-bread > div:nth-of-type(2){
+        grid-column : 7 / 11;
+    }
+
+    .everyday-range-breads .farmstyle-bread > div:nth-of-type(3){
+        grid-column : 3 / 7;
+    }
+
+    .everyday-range-breads .farmstyle-bread > div:nth-of-type(4){
+        grid-column : 7 / 11;
+    }
+
+    
+
+    /**Common styling**/
+
+    .homepage-products,.aboutus-body,.terms-and-conditions,
+    .bakeries-content,.downloads-container,.everyday-range-breads{
+        padding : 40px 100px 20px;
+    }
+
+    .contact-details{
+        padding : 0px 100px 0px;
+    }
+
+    .pageband{
+        text-align: left;
+        padding : 15px 20px 15px 100px;
+        font-size : 28px;
+    }
+
+    .bakery-item h5{
+        font-size : 18px;
     }
 
 }
